# webfly

./: .env.example  .gitattributes  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  LICENSE  README.md  README.zh-CN.md  analysis_options.yaml  app.pkl  eslint.config.js  index.html  justfile  lefthook.yml  main.py  package.json  pixi.toml  pnpm-lock.yaml  pubspec.yaml  pyproject.toml  tsconfig.json  vite.config.ts
.claude/: settings.json  settings.local.json  webf-claude-code-skills.version
docs/: css_properties.json5  error-handling-architecture.md  hybrid-routing-workarounds.md  javascript-error-handling.md  webf-css-display-constraints.md  webf-flutter-theme-bidirectional-sync.md  webf-issue-renderflowlayout-mutated-during-layout.md
flutter/: .env.example  .gitignore  README.md  analysis_options.yaml  app.pkl  justfile  main.py  pubspec.yaml  pyproject.toml
flutter/tools/flutter-gen-platforms/: Cargo.toml
flutter/tools/flutter-gen-platforms/.cargo/: config.toml
flutter/tools/flutter-gen-platforms/src/: android.rs  config.rs  main.rs  utils.rs  web.rs  windows.rs
frontend/: .gitignore  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.cjs  tailwind.config.js  tsconfig.json  vite.config.ts
issues/: webf-hybrid-delegate-state-bypass.md
lib/: config.dart  errors.dart  main.dart
scripts/: check-tools.sh  copy-use-cases.js  gen_branding.py  install-tools.sh  setup-tools.sh
src/: App.tsx  index.css
test/: router_test.dart  widget_test.dart
tools/: manage_use_cases.rs
use_cases/: package.json  pnpm-lock.yaml  vite.config.ts
(+279 files in other folders)
