[package]
name = "flutter-gen-platforms"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "flutter-gen-platforms"
path = "src/main.rs"

[dependencies]
anyhow = "^1.0"
android-manifest = "^0.3"
clap = { version = "^4.5", features = ["derive"] }
java-properties = "^2.0"
scraper = "^0.25"
serde_json = "^1.0"
serde = { version = "^1.0", features = ["derive"] }
serde-saphyr = "^0.0.16"
toml = "^0.9"
xmltree = "^0.12"
walkdir = "^2.5"
which = "^8.0"
